objects/AsiaQuotationTermsConditions__c.object
<CustomObject>
    <fields>
        <fullName>BankDetail__c</fullName>
        <label>Bank Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Export__c</fullName>
        <defaultValue>&quot;Export is subject to receipt of an export license from the proper governmental authorities. Thus, JEOL reserves the right to be free from the contract without penalty should the license not be granted.&quot;</defaultValue>
        <label>Export</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Installation__c</fullName>
        <defaultValue>&quot;Installation will be done by JEOL or JEOL authorized engineer&quot;</defaultValue>
        <label>Installation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <defaultValue>&quot;JEOL Ltd.&quot;</defaultValue>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing__c</fullName>
        <label>Packing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>&quot;This quotation is based on DDP customer&quot;</defaultValue>
        <label>Price</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProfitCalculation__c</fullName>
        <label>Profit Calculation</label>
        <referenceTo>AsiaProfitCalculation__c</referenceTo>
        <relationshipLabel>Quotation Terms &amp; Conditions</relationshipLabel>
        <relationshipName>Quotation_Terms_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <defaultValue>&quot;* Please indicate JEOL ASIA Quotation No. on your purchase order.&quot; &amp; BR() &amp; &quot;* This PM parts list based on estimation to prepare advance. Actual billing will be exactly followed whatever used by service report.&quot; &amp; BR() &amp; &quot;* If any parts were found defective or need replacement during performance not in above list, those will be charged separately with this quotation.&quot; &amp; BR() &amp; &quot;We look forward to your valued order soon. Thank You.&quot;</defaultValue>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <defaultValue>&quot;On‐site brief training is included, for all systems.&quot;</defaultValue>
        <label>Training</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Validity__c</fullName>
        <defaultValue>&quot;This quotation stands valid for 90 days.&quot;</defaultValue>
        <label>Validity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <defaultValue>&quot;The instrument(s), supplied in accordance with the specifications mentioned in the catalogues submitted, shall be warranted to be free from defects under ordinary use for a period of TWELVE (12) months from the date of  completion of the installation or EIGHTEEN (18) months from the date of Bill of Lading (B/L) in case of sea shipment and/or from the date of Air Way Bill (AWB) in case of air shipment whichever occurs first. However, JEOL shall not be responsible for any damages to the instrument(s) caused by faulty operation or rough use, power and water failures, fire, flood, earthquake or any Force Majeures.&quot;</defaultValue>
        <label>Warranty</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Quotation Terms &amp; Conditions</label>
    <nameField>
        <label>AsiaQuotationTermsConditions</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>